"""Bazel module definition for rust-tools project."""

module(
    name = "rust-tools",
    version = "0.1.0",
)

# Rust rules
bazel_dep(name = "rules_rust", version = "0.68.1")

# Register Rust toolchains
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = [ "1.85.0" ],
)
