[package]
name = "share_drive"
version = "0.1.0"
edition = "2021"

[lib]
name = "share_drive"
path = "src/lib.rs"

[[bin]]
name = "share_drive"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT for service account auth
jsonwebtoken = "9.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# File utilities
mime_guess = "2.0"
glob = "0.3"

# URL parsing
regex = "1.11"

# Async utilities
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

# Pin time crate to avoid edition2024 requirement
time = "=0.3.36"

[dev-dependencies]
mockito = "1.6"
tempfile = "3.15"
